# agents

./: .gitignore  README.md
agent-research/: README.md  agent-research.py
receipts/: README.md  receipt_processor.py  receipts.csv
receipts-crew-openai/: README.md  pyproject.toml  receipts_data.csv
receipts-crew-openai/src/crew_test_openai/: crew.py  main.py
receipts-crew-openai/src/crew_test_openai/config/: agents.yaml  tasks.yaml
receipts-local/: README.md  app.py  receipt_agent.py  receipts.csv
update-pricing/: README.md  compare_llm_prices.py
update-pricing/test/: main_pricing_sheet.xlsx  vendor1_pricing_sheet.xlsx
