[project]
name = "crew_test_openai"
version = "0.1.0"
description = "crew-test-openai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crew_test_openai = "crew_test_openai.main:run"
run_crew = "crew_test_openai.main:run"
train = "crew_test_openai.main:train"
replay = "crew_test_openai.main:replay"
test = "crew_test_openai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
